--- a/admin/config.yml
+++ b/admin/config.yml
@@ -10,24 +10,47 @@ media_folder: "static/images/uploads" # Media files will be stored in the repo u
 public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
-    folder: "_posts/blog" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    fields: # The fields for each document, usually in front matter
-      - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
-      - {label: "Body", name: "body", widget: "markdown"}
-  - name: "posts"
+  - name: "page"
+    label: "Page"
+    folder: "/"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - label: "Layout"
+        name: "layout"
+        widget: "hidden"
+        default: "page"
+      - label: "Title"
+        name: "title"
+        widget: "string"
+      - label: "Body"
+        name: "body"
+        widget: "markdown"
+  - name: "post"
     label: "Post"
     folder: "_posts"
-    filter:
-      field: language
-      value: en
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    create: true
     fields:
-      - {label: "Language", name: "language"}
-
+      - label: "Layout"
+        name: "layout"
+        widget: "hidden"
+        default: "post"
+      - label: "Date"
+        name: "date"
+        widget: "hidden"
+        default: true
+      - label: "Title"
+        name: "title"
+        widget: "string"
+      - label: "Thumbnail"
+        name: "thumbnail"
+        widget: "image"
+        allow_multiple: false
+      - label: "Header Image"
+        name: "header-image"
+        widget: "image"
+        allow_multiple: false
+      - label: "Body"
+        name: "body"
+        widget: "markdown"
